--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -29,6 +29,7 @@
             android:id="@+id/textViewGreeting"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/inter_regular"
             android:text="@string/WelcomeLogin"
@@ -43,10 +44,12 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/usernameInputLayout"
+            android:textColorHint="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <EditText
+                android:textColor="@color/black"
                 android:id="@+id/editTextUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -66,10 +69,12 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/emailInputLayout"
             android:layout_width="match_parent"
+            android:textColorHint="@color/black"
             android:layout_height="wrap_content">
 
             <EditText
                 android:id="@+id/editTextEmail"
+                android:textColor="@color/black"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
@@ -82,11 +87,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/password"
+            android:textColor="@color/black"
             android:layout_marginTop="8dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/passwordInputLayout"
             app:passwordToggleEnabled="true"
+            android:textColorHint="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -95,6 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:textColor="@color/black"
                 android:hint="@string/password"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -103,12 +111,14 @@
             android:id="@+id/textViewConfirmPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
             android:text="@string/konfirmasi_password"
             android:layout_marginTop="8dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/confirmPasswordInputLayout"
             app:passwordToggleEnabled="true"
+            android:textColorHint="@color/black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -116,7 +126,7 @@
                 android:id="@+id/editTextConfirmPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:inputType="textPassword"
                 android:hint="@string/konfirmasi_password"/>
 
